<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/edittext_rounded"
            android:id="@+id/emailEditText"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/email"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded"
            android:id="@+id/passwordEditText"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotloginLayout"
        android:layout_below="@id/inputLayout"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/form_vertical_marigin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:visibility="gone"
        android:textColor="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_rounded"
            android:text="@string/login"
            android:id="@+id/submitLoginButton"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotloginLayout"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/form_vertical_marigin"
        android:weightSum="1">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/facebookButton"
                android:background="@drawable/ic_facebook"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/center_axis_marigin"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/googleButton"
                android:background="@drawable/ic_google_plus"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/center_axis_marigin"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>