<resources>
    <string name="app_name">Skamper</string>
    <string name="sinch_key">1abe0367-b09a-4c11-826f-d537e6e67e1a</string>
    <string name="sinch_secret">31/QgOrUjkOKiL/BpaK85g==</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="interjection">!</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="wrong_email">Wrong email address</string>
    <string name="empty_field">Empty field</string>
    <string name="username_to_short">Username too short</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_not_same">Passwords are not same</string>

    <string name="facebook_app_id">953237374877647</string>
    <string name="fb_login_protocol_scheme">fb953237374877647</string>

</resources>
