<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:id="@+id/usernameEditText"
            android:background="@drawable/edittext_rounded"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/username"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:id="@+id/emailEditText"
            android:background="@drawable/edittext_rounded"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/email"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:id="@+id/passwordEditText"
            android:background="@drawable/edittext_rounded"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rePasswordEditText"
            android:background="@drawable/edittext_rounded"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/form_vertical_marigin"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotloginLayout"
        android:layout_below="@id/inputLayout"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/form_vertical_marigin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitRegisterButton"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_rounded"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>