...
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLayout"
        android:orientation="horizontal"
        android:id="@+id/choseModeLayout"
        android:weightSum="1">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin">
...
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerFormButton"
                android:layout_gravity="end"
                android:background="@drawable/button_circle_unchecked"
                android:text="@string/sign_up"
                android:textSize="@dimen/big_text_size"
                android:textAllCaps="false"
                android:textColor="@color/black"/>
...
